package ssf;

enum EventType{
    EVENT_RAW = 1;
    EVENT_HEARTBEAT = 2;
    EVENT_ACK = 3;
}

message EventHeader{
    optional uint64 sequenceId = 1;
    optional uint64 hashCode = 2;
    optional int32 nodeId = 3;
    optional int32 msgType = 4;
}

message HeartBeat{
    optional bool req = 1;
    optional bool res = 2;
}

message EventACK{
    optional int64 sequeceId = 1;
    optional uint64 mask = 2;
}

Message IPCtrlRequest{
    optional string cmd = 1;
    repeated string args = 2;
}

Message IPCtrlResponse{
    optional int32 errCode = 1;
    optional string response = 2;
}
